# lecture-fragmentation

./: .env.example  .gitignore  README.md  demo_expriment.py  kpi.py  pyproject.toml
kpi/cli/: __init__.py
kpi/datasets/: avlecture.py  base_dataset.py  mitfld.py
kpi/experiments/: __init__.py
kpi/metrics/: __init__.py  f1.py  iou.py  label_match.py  mof.py
kpi/models/: __init__.py  _jvte.py  _twfinch.py  base_model.py  llm_frag.py  lstm.py  lstm_jvte.py  scene_detector.py  simple_models.py  tbm.py  text_tiling.py  tw_finch.py  tw_finch_jvte.py  voice_activity_detector.py
kpi/utils/: __init__.py  gpt_http.py  preprocessing.py  video.py
